# finhealth-pilot

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  webhook.json
authentication/: models.py  plaid_config.py  serializers.py  views.py
authentication/migrations/: 0001_initial.py  0002_plaiditem_delete_plaidtoken.py
balance/: urls.py  views.py
finhealth/: .env  .env.example  .settings.py.swp  asgi.py  celery.py  settings.py  urls.py  wsgi.py
iowa/: apps.py  test.py  urls.py
iowa/templates/iowa/: index.html
pilot/: admin.py  apps.py  forms.py  models.py  plaid_config.py  tasks.py  urls.py  utils.py  views.py
pilot/migrations/: 0001_initial.py  0002_plaiditem_created_alter_account_plaid_account_id.py  0002_remove_transaction_check_number.py  0002_remove_transaction_payment_meta.py  0003_delete_transaction.py  0003_remove_transaction_name_and_more.py  0003_rename_item_id_account_item.py  0004_alter_plaiditem_id.py  0004_initial.py  0005_alter_pid_participant_id.py  0006_alter_pid_participant_id.py  0007_alter_pid_participant_id.py  0008_alter_pid_participant_id.py  0009_alter_pid_participant_id.py
pilot/static/pilot/: style.css
pilot/templates/pilot/: .index.html.swo  .index.html.swp  (+7 more)
static/iowa/: GainLosConds.xlsx  GainLosConds_testforshortexp.xlsx  IOWA_Gambling_4Choice_H.js
transaction/: models.py  urls.py  views.py
transaction/migrations/: 0001_initial.py  0002_plaiditem_transaction_participant_id_and_more.py  0003_alter_account_item_remove_transaction_plaid_account_and_more.py  0004_plaiditem_transaction_plaid_account_and_more.py
