[tool.poetry]
name = "finhealth"
version = "0.1.0"
description = "Research prototype to retrieve and annotate financial transactions in the context of bipolar disorder."
authors = ["Jeff Brozena <brozena@psu.edu>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
django-environ = "^0.11.2"
djangorestframework = "^3.15.1"
plaid-python = "^22.0.0"
adrf = "^0.1.6"
black = "^24.2.0"
psycopg = "^3.1.18"
python-dotenv = "^1.0.1"
celery = "^5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
